fix info align

--- a/lms/static/sass/_info-wrapper.scss
+++ b/lms/static/sass/_info-wrapper.scss
@@ -7,5 +7,10 @@ div.info-wrapper section.handouts {
 div.info-wrapper {
     * {
         font-family: bahij_thesansarabicplain !important;
+        text-align: right !important;
+    }
+    .date-summary-container .date-summary .date,
+    .date-summary-container .date-summary .heading {
+        text-align: right;
     }
 }
